--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,8 @@ dependencies = [
   "numpy>=1.24",
   "networkx>=3.0",
   "pulp>=2.7",
+  "matplotlib>=3.8",
 ]
-
-[project.optional-dependencies]
-plot = ["matplotlib>=3.8"]
 
 [project.urls]
 Repository = "https://github.com/<you>/<repo>"
