--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ ddp-mwe01 = "ddp.scripts.mwe_01:main"
 ddp-many = "ddp.scripts.run_many:main"
 ddp-run   = "ddp.scripts.run:main"
 ddp-sweep = "ddp.scripts.sweep_param:main"
+ddp-plot  = "ddp.scripts.plot_results:main"
 ddp-plot-sweep = "ddp.scripts.plot_sweep:main"
 
 [tool.setuptools.packages.find]
