--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ ddp-run   = "ddp.scripts.run:main"
 ddp-sweep = "ddp.scripts.sweep_param:main"
 ddp-plot  = "ddp.scripts.plot_results:main"
 ddp-plot-sweep = "ddp.scripts.plot_sweep:main"
+ddp-bench-opt = "ddp.scripts.bench_opt_methods:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
