--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ ddp-plot-sweep = "ddp.scripts.plot_sweep:main"
 ddp-bench-opt = "ddp.scripts.bench_opt_methods:main"
 ddp-shadow-sweep = "ddp.scripts.shadow_sweep:main"
 ddp-trace-available = "ddp.scripts.trace_available:main"
+ddp-inspect-average-duals = "ddp.scripts.inspect_average_duals:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
